infra/k8s-ci/patch-client-probes-ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  template:
    spec:
      containers:
        - name: client
          readinessProbe:
            $patch: replace
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            $patch: replace
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 6
