infra/k8s-ci/patch-imagepullsecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
