infra/k8s-ci/patch-nats-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  template:
    spec:
      containers:
        - name: nats
