infra/k8s-ci/patch-nats-no-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  template:
    spec:
      containers:
        - name: nats
          command:
            - /bin/sh
            - -c
            - >
              nats-streaming-server
              -p 4222
              -m 8222
              -hbi 5s
              -hbt 5s
              -hbf 2
              -SD
              -cid ticketing
          securityContext:
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: nats-data
              mountPath: /data
      volumes:
        - name: nats-data
          emptyDir: {}
