infra/k8s-ci/patch-probes-ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  template:
    spec:
      containers:
        - name: tickets
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  template:
    spec:
      containers:
        - name: orders
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 6
