infra/k8s-ci/patch-redis-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  template:
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim: null
          emptyDir: {}
      containers:
        - name: expiration-redis
          volumeMounts:
            - name: redis-data
              mountPath: /data
